--- a/app/views/essentials/hoteldetails.html.erb
+++ b/app/views/essentials/hoteldetails.html.erb
@@ -389,9 +389,7 @@ $("#ex2").slider({});
 
 <script type="text/javascript" >
             $(document).ready(function() {
-        $('.carousel').carousel({
-  interval: 100
-})
+        $('.carousel').carousel()
             });
 </script>
 
