--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@ body,html{
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="hotelwherever"><img src="/assets/logo2.png"></a>
+      <a class="navbar-brand" href="hotelwherever"><img src="/assets/logo2.png" style="max-width:300px; margin-top: -7px;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
