--- a/app/views/essentials/sandbox.html.erb
+++ b/app/views/essentials/sandbox.html.erb
@@ -1,19 +1,21 @@
 
 
 
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
 
-<div class="well">
-<input type="text" name="date" class="datepicker">
-</div>
+
+
+ <input type="text" name="datepicker" id="datepicker" placeholder="Check-In">
+
+
 
 
 <script>
-
-
-</script>
+  $(function() {
+    $( "#datepicker" ).datepicker();
+  });
+  </script>
