--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,25 @@
   <%= csrf_meta_tags %>
 
 <style>
-body,html{
- height:100%;
+html, body {
+  height: 100%;
 }
-.container{
- min-height:100%;
+
+#wrap {
+  min-height: 100%;
 }
-.footer{
- height:40px;
- margin-top:-40px;
+#main {
+  overflow:auto;
+  padding-bottom:150px; /* this needs to be bigger than footer height*/
+}
+
+.footer {
+  position: relative;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  padding-top:20px;
+  background-color:#5e5e5e;
 }
 
 </style>
@@ -87,12 +97,18 @@ body,html{
 
 </body>
 
-<div class="container"></div>
-  <p>Your website content here.</p>
+<div id="wrap">
+  <div id="main" class="container clear-top">
+    <p></p>
+  </div>
+</div>
+<footer class="footer" style="color:white">
+  <p>Contact Us</p>
+  <p>FAQ</p>
+  <p>Find Us on Facebook</p>
 
- <div class="footer navbar navbar-default">
-   <DT>Contact Us</DT>
- </div>
+
+</footer>
 
 
 </html>
