--- a/app/views/essentials/hoteldetails.html.erb
+++ b/app/views/essentials/hoteldetails.html.erb
@@ -404,7 +404,7 @@ color:red;
 
 <%end%>
 
-
+</div>
 
 
 
@@ -469,7 +469,3 @@ $("#ex2").slider({});
         $('.carousel').carousel()
             });
 </script>
-
-
-    </body>
-    </html>
