adding_google_tags
adding_google_tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,12 @@
 <html>
 <head>
   <title>Hotel Wherever</title>
+
+<meta name="description" content="Hotel Wherever - Search for your favorite hotel brands around the world">
+<meta name="msvalidate.01" content="41CFF12EE6E9EE06103306BB2946F4B3" />
+
+
+
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <script>
