responsive design changes
responsive design changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,17 +19,17 @@ html, body {
 }
 
 #wrap {
-  min-height: 100%;
+
 }
 #main {
   overflow:auto;
-  padding-bottom:150px; /* this needs to be bigger than footer height*/
+  padding-bottom:100px; /* this needs to be bigger than footer height*/
 }
 
 .footer {
   position: relative;
-  margin-top: -150px; /* negative value of footer height */
-  height: 150px;
+  margin-top: -100px; /* negative value of footer height */
+  height: 100px;
   clear:both;
   padding-top:20px;
   background-color:#5e5e5e;
@@ -43,6 +43,28 @@ html, body {
 
 </style>
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css"
+
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
+
+
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+
+
+<script type="text/javascript" src="http://seiyria.github.io/bootstrap-slider/javascripts/bootstrap-slider.js"></script>
+
+<script src="http://bootstrapdocs.com/v2.0.3/docs/assets/js/bootstrap-carousel.js"></script>
 
 
 
@@ -61,7 +83,7 @@ html, body {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="hotelwherever"><img src="/assets/logo2.png" style="max-width:300px; margin-top: -7px;"></a>
+      <a class="navbar-brand" href="/"><img src="/assets/logo2.png" style="max-width:300px; margin-top: -7px;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -116,7 +138,7 @@ html, body {
   </div>
 </div>
 <footer class="footer" style="color:white">
-  <p>Contact Us</p>
+  <p><a href="/contactus.html"> Contact Us</a></p>
   <p>FAQ</p>
   <p>Find Us on Facebook</p>
 
