--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -1,24 +1,4 @@
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css"
-
-
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-
-
-
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-
-
-<script type="text/javascript" src="http://seiyria.github.io/bootstrap-slider/javascripts/bootstrap-slider.js"></script>
 
 
 <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.js"></script>!-->
@@ -170,7 +150,7 @@ color:red;
 
               </div>
 
-        <div class="col-md-6 short_div">
+        <div class="col-md-6 col-xs-12 col-sm-3 hidden-xs short_div">
 <% if @check.present? %>
 
 <div class="alert alert-danger alert-dismissible" role="alert">
@@ -202,7 +182,7 @@ color:red;
 
 
 
-<div class="col-md-1 short_div">
+<div class="col-md-1 col-xs-12 col-sm-3 short_div">
 
 
 <label for = "adults">Adults</label>
@@ -222,7 +202,7 @@ color:red;
 
 
 
-        <div class="col-md-1 short_div">
+        <div class="col-md-1 col-xs-12 col-sm-3 short_div">
 
 <label for = "stars">Stars</label>
 <select id="stars" class="form-control" placeholder=".col-lg-1">
@@ -238,7 +218,7 @@ color:red;
 
 
 
-        <div class="col-md-2 short_div">
+        <div class="col-md-2 col-xs-12 col-sm-3 short_div">
 
 <label for = "brand">Brand</label>
 <select id="brand" name = "brand" class="form-control" placeholder=".col-lg-4" value="<%=@chain%>">
@@ -268,7 +248,7 @@ color:red;
     </select>
 </div>
 
-        <div class="col-md-2 short_div">
+        <div class="col-md-2 col-xs-12 col-sm-3 short_div">
 
 <label for = "temp">Check-In Temperature</label>
 <select id="temp" class="form-control" name= "temp" placeholder=".col-lg-2">
@@ -283,7 +263,7 @@ color:red;
     </select>
 </div>
 
-<div class="col-md-2 short_div">
+<div class="col-md-2 col-xs-12 col-sm-3 short_div">
 
 <label for = "region">Region</label>
 <select id="region" class="form-control" name="region" placeholder=".col-lg-4" value = "<%=@region%>">
@@ -303,7 +283,7 @@ color:red;
 
         </div>
 
-        <div class="col-md-2 short_div">
+        <div class="col-md-2 col-xs-12 col-sm-3 short_div">
 
 <label for = "Hotel Type">Hotel Type</label>
 <select id="Hotel Type" class="form-control" placeholder=".col-lg-4">
@@ -320,7 +300,7 @@ color:red;
 
 
 
-         <div class="col-md-3 short_div" style="padding-top:40px;text-align:center;">
+         <div class="col-md-12 col-xs-12 col-sm-3 short_div" style="padding-top:40px;padding-bottom:40px;text-align:center;">
 
 
 
@@ -529,12 +509,12 @@ Date: <%=weather["dateconverted"]%>
         </div>
 
 
+<%if counterbinary==1 then %>
 <div class="panel-group col-md-8 col-md-offset-2">
 <div id="map-canvas" style="height:700px">
 </div>
-
 </div>
-
+<%end%>
 
 
     </div>
